--- a/wp-content/themes/cp/css/partials/_custom.scss
+++ b/wp-content/themes/cp/css/partials/_custom.scss
@@ -1,259 +1,301 @@
-/*VAR*/
-
-
 
 /* HEADER */
 .main_header {
-  position: relative;
+	position: relative;
 }
 
 h1.logo {
-  text-align: center;
-  margin: 0;
-  a {
-    margin: 2em auto 1.6em auto;
-    display: block;
-    img {
-      width: auto;
-    }
-  }
+	text-align: center;
+	margin: 0;
+	a {
+		margin: 2em auto 1.6em auto;
+		display: block;
+		text-decoration: none;
+		img {
+			width: auto;
+		}
+	}
 }
 
 @media (min-width: 320px) and (max-width: 462px) {
-  h1.logo {
-    display: block;
-    float: left;
-    margin: 0;
-    text-align: left;
-    a {
-      margin: 1.6em auto;
-      display: block;
-      img {
-        width: 265px;
-      }
-    }
-  }
-  .eight.columns {
-    width: 100%;
-    margin: 0;
-  }
+	h1.logo {
+		display: block;
+		float: left;
+		margin: 0;
+		text-align: left;
+		a {
+			margin: 1.6em auto;
+			display: block;
+			img {
+				width: 265px;
+			}
+		}
+	}
+	.eight.columns {
+		width: 100%;
+		margin: 0;
+	}
 }
 
 @media (min-width: 462px) and (max-width: 926px) {
-  h1.logo {
-    display: block;
-    float: left;
-    margin: 0;
-    text-align: left;
-    a img {
-      width: 350px;
-    }
-  }
-  .nav-toggle {
-    margin-top: 40px;
-  }
+	h1.logo {
+		display: block;
+		float: left;
+		margin: 0;
+		text-align: left;
+		a img {
+			width: 350px;
+		}
+	}
+	.nav-toggle {
+		margin-top: 40px;
+	}
 }
 
 
 /* NAV */
 
+
 .deco {
-  //border-bottom: 1px solid $secondary-color;
-  width: 100%;
-  margin: 0 auto;
+	border-bottom: 1px solid $quaternary-color;
+	width: 100%;
+	margin: 0 auto;
 }
 
 nav {
-  margin-bottom: 16px;
-  text-align: center;
-  ul {
-    font-size: $font-size-normal ;
-    display: table;
-    margin: 0 auto;
-    width: 491px;
-  }
-  li {
-    display: table-cell;
-    a {
-      color:$primary-color;
-      text-decoration: none;
-      &:hover {
-        color: #666;
-      }
-    }
-  }
+	margin-bottom: 16px;
+	text-align: center;
+	ul {
+		font-size: $font-size-normal ;
+		display: table;
+		margin: 0 auto;
+		width: 491px;
+	}
+	li {
+		display: table-cell;
+			a {
+				color:$primary-color;
+				text-decoration: none;
+				&:hover {
+					color: #666;
+				}
+			}
+		}
 }
 
 /* Sidebar */
 
 aside ul {
-  font-size: 1.458em;
-  list-style: outside none none;
-  border-top: 1px solid $secondary-color;
-  li {
-    border-bottom: 1px solid $secondary-color;
-    margin: 0;
-    padding: 8px 0;
-  }
+	font-size: 1.458em;
+	list-style: outside none none;
+	border-top: 1px solid $secondary-color;
+	li {
+		border-bottom: 1px solid $secondary-color;
+		margin: 0;
+		padding: 8px 0;
+	}
 
-   a { text-decoration: none; }
+	 a { text-decoration: none; }
 }
 
 /* twitter */
 
 #jstwitter {
-  position: relative;
-  .item {
-    border-bottom: 1px solid #ccc;
-    font-size: $font-size-normal ;
-    margin-top: 10px;
-    padding-bottom: 10px;
-  }
-  .tweet-wrapper {
-    line-height: 140%;
-  }
-  .item {
-    a {}
-    img {
-      width: 100%;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    .text {
-      color: #414141;
-      display: block;
-      font-size: 0.9rem;
-    }
-    .time {
-      color: #ccc;
-    }
-  }
-  .tweet .user {
-    color: #ccc;
-  }
+	position: relative;
+	font-style: italic;
+	.item {
+		border-bottom: 1px solid #ccc;
+		font-size:1.4rem;
+		margin-top: 10px;
+		padding-bottom: 10px;
+	}
+	.tweet-wrapper {
+		line-height: 140%;
+	}
+	.item {
+		a {}
+		img {
+			width: 100%;
+		}
+		a:hover {
+		}
+		.text {
+			color: #414141;
+			display: block;
+
+		}
+		.time {
+			color: #ccc;
+		}
+	}
+	.tweet .user {
+		color: #ccc;
+	}
 }
 
-.time a, .user {
-  color: #999;
-  font-size: 0.8rem;
+.time a, .user a{
+	color: #999;
+
 }
 
 .container.section {
-  margin: 60px auto;
+	margin: 60px auto;
 }
 
-.postlist {
-  display: inline-block;
-  margin: 0 0 24px;
-  img {
-    width: 100%;
-  }
+.postlist, .postinterior {
+	display: inline-block;
+	margin: 0 0 24px;
+	img {
+		width: 100%;
+	}
+
+	 a{ text-decoration:underline;}
+ h2 a { text-decoration:none;}
+}
+
+.post-img-recent {
+		display: block;
+		height: 213px;
+		overflow: hidden;
+		position: relative;
+		width: 100%;
+}
+@media (min-width: 480px) and (max-width: 1024px) {
+
+.post-img-recent {
+		display: block;
+		height:600px!important;
+		overflow: hidden;
+		position: relative;
+		width: 100%;
+}
+}
+@media (min-width: 300px) and (max-width: 480px) {
+
+.post-img-recent {
+		display: block;
+		height:400px!important;
+		overflow: hidden;
+		position: relative;
+		width: 100%;
+}
+
 }
 
 .blog_img {
-  margin-bottom: 32px;
+	margin-bottom: 32px;
 }
 
-.gallery {
-  background-color: #fff;
-}
+
 
 .readmore-social {
-  font-size: 1.45rem;
-  color: $secondary-color;
-  border-top: 1px solid $secondary-color;
-  border-bottom: 1px solid $secondary-color;
-  padding: 16px 0;
-  margin: 16px 0;
-}
+	font-size: 1.45rem;
+	color: $quaternary-color;
+	border-top: 1px solid $quaternary-color;
+	border-bottom: 1px solid $quaternary-color;
+	font-size: 1.45rem;
+	margin: 0 0 60px;
+	padding: 16px 0;
 
+		a{ 
+			color: $quaternary-color;
+			text-decoration:none;
+		}
+
+		:hover{ color:$tertiary-color ;}
+	}
+
+	
 .footer {
-  background-color: #414141;
-  p {
-    margin: 40px 0;
-    color: #fff;
-    text-align: center;
-  }
+	background-color: #414141;
+	p {
+		margin: 40px 0;
+		color: #fff;
+		text-align: center;
+	}
 }
 
 .containergallery {
-  background: #eee;
-  &:before {
-    content: "";
-    display: table;
-  }
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+	background: #eee;
+	&:before {
+		content: "";
+		display: table;
+	}
+	&:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+}
+
+.gallery {
+	background-color: #e5e5e5;
 }
 
 /* clearfix */
 
 .item {
-  float: left;
-  margin-bottom: 10px;
-  img {
-    max-width: 100%;
-    max-height: 100%;
-    vertical-align: bottom;
-  }
+	float: left;
+	margin-bottom: 10px;
+	img {
+		max-width: 100%;
+		max-height: 100%;
+		vertical-align: bottom;
+	}
 }
 
 .first-item {
-  clear: both;
+	clear: both;
 }
 
 /* remove margin bottom on last row */
 
 .last-row {
-  margin-bottom: 0;
-  ~ .item {
-    margin-bottom: 0;
-  }
+	margin-bottom: 0;
+	~ .item {
+		margin-bottom: 0;
+	}
 }
 
 .comments {
 
-   width: 91.3333%;
-     margin-left: 4%;
-     float:right;
-     display: inline-block;
+	 width: 91.3333%;
+		 margin-left: 4%;
+		 float:right;
+		 display: inline-block;
 
-     p{ margin-left: 20px;}
+		 p{ margin-left: 20px;}
 
-        .reply {    display: inline-block;}
+				.reply {    display: inline-block;}
 
 
-    
+		
 }
 
 /*.comment-form{
 
  input, textarea { display: inline-block;
-      width: 100%;
-     }
+			width: 100%;
+		 }
 
-     label{ color:$primary-color;}
+		 label{ color:$primary-color;}
 
 
 }*/
 .comment-list {list-style:none;}
 
 .comment { 
-  float:left;
-  margin:40px auto;
-  border-top:1px solid $secondary-color;
-    border-bottom:1px solid $secondary-color;
-    padding: 20px 0 ;
+	float:left;
+	margin:40px auto;
+	border-top:1px solid $quaternary-color;
+		border-bottom:1px solid $quaternary-color;
+		padding: 20px 0 ;
 
-    .comment-author{ font-size:$font-size-normal; text-decoration:none;}
-    .comment-meta{ 
-      a {color:$quaternary-color; text-decoration:none; margin-bottom:16px; display: inline-block;}
-    }
-  
+		.comment-author{ font-size:$font-size-normal; text-decoration:none;}
+		.comment-meta{ 
+			a {color:$quaternary-color; text-decoration:none; margin-bottom:16px; display: inline-block;}
+		}
+	
 }
 
 .item {   
@@ -265,43 +307,37 @@ aside ul {
 }
 
 .comment-respond { 
-    display: inline-block;
-    opacity: 0.5;
-    transition: opacity .05s ease-in-out; 
-    width:100%; 
-    border:1px solid $primary-color;
-        -webkit-transition: opacity 1s ease-in-out;
-       -moz-transition: opacity 1s ease-in-out;
-        -ms-transition: opacity 1s ease-in-out;
-         -o-transition: opacity 1s ease-in-out;
-            transition: opacity 1s ease-in-out;
+		display: inline-block;
+		opacity: 0.5;
+		transition: opacity .05s ease-in-out; 
+		width:100%; 
+		border:1px solid $primary-color;
+				-webkit-transition: opacity 1s ease-in-out;
+			 -moz-transition: opacity 1s ease-in-out;
+				-ms-transition: opacity 1s ease-in-out;
+				 -o-transition: opacity 1s ease-in-out;
+						transition: opacity 1s ease-in-out;
 
-  &:hover {   
+	&:hover {   
 
-    filter: alpha(opacity=100);
-    opacity: 1;
+		filter: alpha(opacity=100);
+		opacity: 1;
 
  
-  }
+	}
 
 }
 
 .comment-form { padding:20px; 
 p { margin-left:0;}
 
-
-
 }
 
 
 .reply{ float:right ;}
 .reply-title { text-decoration: italic;}
-
 .pagination {
-  text-align: center;
-
-  a{ margin-right: 18px;  text-align: center;}
-
-
+	text-align: center;
+	
+	a{ margin-right: 18px;  text-align: center;}
 }
-
