--- a/wp-content/themes/cp/css/partials/_skeleton.scss
+++ b/wp-content/themes/cp/css/partials/_skeleton.scss
@@ -28,9 +28,9 @@
 $primary-color: #414141;
 $secondary-color:#222;
 $tertiary-color: #888888;
-$quaternary-color: #CCCCCC;
+$quaternary-color: #d6d6d6;
 
-$font-size-normal :1.6em;
+$font-size-normal :1.6333em;
 
 $alink-color: #222;
 $ahover-color: #616161;
@@ -82,7 +82,7 @@ $border-gris-black : 1px solid #000;
 }
 
 /* For devices larger than 400px */
-@media (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 480px) and (max-width: 1024px) {
   .container {
     width: 90%;
     padding: 0;
@@ -90,7 +90,7 @@ $border-gris-black : 1px solid #000;
 }
 
 /* For devices larger than 550px */
-@media (min-width: 550px) {
+@media (min-width: 1023px) {
   .container {
     width: 80%;
   }
@@ -249,13 +249,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 2.6rem;
+  font-size: 3.6rem;
   line-height: 1.2;
   letter-spacing: -.1rem;
 }
 
 h2 {
-  font-size: 2.4rem;
+  font-size: 3rem;
   line-height: 1.25;
   letter-spacing: 0.05rem;
   a{ text-decoration:none; }
@@ -297,10 +297,10 @@ h6 {
     font-size: 2.6rem;
   }
   h2 {
-    font-size: 2.4rem;
+    font-size: 3rem;
   }
   h3 {
-    font-size: 2rem;
+    font-size: 2.4rem;
   }
   h4 {
     font-size: 3.0rem;
@@ -315,6 +315,7 @@ h6 {
 
 p {
   font-size: $font-size-normal ;
+  line-height: 192%
 }
 
 /* Links
@@ -322,10 +323,14 @@ p {
 
 a {
   color: $alink-color;
+
+  text-decoration: underline;
   &:hover {
     color: $ahover-color;
+    border-color:$ahover-color;;
   }
 }
+
 
 /* Buttons 
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -663,13 +668,22 @@ there.
 */
 
 /* Larger than mobile */
-@media (min-width: 400px) {}
+@media (min-width: 400px) {
+
+
+
+}
 
 /* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 550px) {}
+@media (min-width: 550px) {
+
+}
 
 /* Larger than tablet */
-@media (min-width: 750px) {}
+@media (min-width: 750px) {
+
+  .column, .columns{width:100%;}
+}
 
 /* Larger than desktop */
 @media (min-width: 1000px) {
