--- a/wp-content/themes/cp/css/partials/_jquery.flex-images.scss
+++ b/wp-content/themes/cp/css/partials/_jquery.flex-images.scss
@@ -6,9 +6,46 @@
     box-sizing: content-box;
     overflow: hidden;
     position: relative;
-    img {
+
+    a{ position:relative;
+
+
+
+      img {
       width: auto;
-      height: 100%;
+      height: 300px!important;
     }
+    }
+    
   }
+}
+
+.description {
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.8);
+    bottom: 5px;
+    left: 5px;
+    opacity: 0;
+    position: absolute;
+    right: 5px;
+    text-align: center;
+    top: 5px;
+    transition: opacity 0.4s ease-in-out 0s;
+    z-index: 333;
+}
+.description:hover {
+    opacity: 1;
+}
+.description:before {
+    content: "";
+    height: 100%;
+}
+
+.description h3 {
+    font-size: 16px;
+    color: $primary-color;
+    font-weight: 400;
+    letter-spacing: 2px;
+    line-height: 1600%;
+    text-transform: uppercase;
+    width: 100%;
 }
