--- a/wp-content/themes/cp/css/partials/_responsive-nav.scss
+++ b/wp-content/themes/cp/css/partials/_responsive-nav.scss
@@ -1,17 +1,17 @@
 .nav-collapse {
-  .disable-pointer-events {
-    pointer-events: none !important;
-  }
-  z-index: 1;
   box-sizing: border-box;
-  * {
-    box-sizing: border-box;
-  }
   float: left;
   list-style: outside none none;
   margin: 0;
   padding: 0;
   width: 100%;
+  z-index: 1;
+  .disable-pointer-events {
+    pointer-events: none !important;
+  }
+  * {
+    box-sizing: border-box;
+  }
   ul {
     float: left;
     list-style: outside none none;
@@ -35,14 +35,14 @@
     text-decoration: none;
     text-transform: uppercase;
     width: 100%;
-    :focus {
+    *:focus {
       background: none repeat scroll 0 0 #ca2d09;
       outline: medium none;
     }
   }
 }
 
-@media screen and (min-width: 58em) {
+@media (min-width: 768px){
   .nav-collapse {
     text-align: center;
     ul {
@@ -51,40 +51,43 @@
   }
 }
 
-@media screen and (min-width: 58em) {
+@media (min-width: 768px){
   .nav-collapse li {
     display: inline-block;
     float: none;
+    margin-bottom: 0;
     margin-left: 0.2em;
     margin-right: 0.2em;
     width: auto;
-    margin-bottom:0;
   }
 }
-
-@media screen and (min-width: 58em) {
+@media (min-width: 768px){
   .nav-collapse a {
     background: none repeat scroll 0 0 transparent;
     border: 0 none;
-    color: $primary-color;
+    color: #414141;
     margin: 0;
     padding: 0.5em;
     transition: background 0.5s ease 0s;
-    :hover, :focus {
-      background: none repeat scroll 0 0 #e7e5e3;
+    * {
+      &:hover, &:focus {
+        background: none repeat scroll 0 0 #e7e5e3;
+      }
     }
   }
 }
 
-@media screen and (min-width: 58em) {
+@media (min-width: 768px){
   .nav-collapse .active a {
     background: none repeat scroll 0 0 #f43c12;
     color: white;
-    :hover {
-      text-decoration: none;
-    }
-    :focus {
-      background: none repeat scroll 0 0 #ca2d09;
+    * {
+      &:hover {
+        text-decoration: none;
+      }
+      &:focus {
+        background: none repeat scroll 0 0 #ca2d09;
+      }
     }
   }
 }
@@ -97,7 +100,7 @@
   position: absolute;
 }
 
-@media screen and (min-width: 58em) {
+@media (min-width: 768px){
   .js .nav-collapse {
     max-height: none;
     position: relative !important;
@@ -110,20 +113,13 @@
 
 .nav-toggle {
   -moz-user-select: none;
-  background: url("../images/hamburger.gif") no-repeat scroll 50% 33% #000000;
+  background: url("../images/hamburger.gif") no-repeat scroll 0% 0% ;
   display: block;
   float: right;
-  height: 55px;
+  height: 50px;
   overflow: hidden;
   text-indent: -9999px;
-  width: 70px;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none;
+  width: 50px;
 }
 
 @media not all, screen and (min--moz-device-pixel-ratio: 1.3), not all, not all, screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
@@ -133,7 +129,7 @@
   }
 }
 
-@media screen and (min-width: 58em) {
+@media (min-width: 768px){
   .nav-toggle {
     display: none;
   }
