Botones sociales - orden código
desoues le doy estilos

--- a/wp-content/themes/cp/css/partials/_custom.scss
+++ b/wp-content/themes/cp/css/partials/_custom.scss
@@ -118,6 +118,7 @@ aside ul {
 	position: relative;
 	 margin-bottom: 40px;
 	font-style: italic;
+	float:left;
 	.item {
 		border-bottom: 1px solid #ccc;
 		font-size:1.4rem;
