--- a/wp-content/themes/cp/css/partials/_skeleton.scss
+++ b/wp-content/themes/cp/css/partials/_skeleton.scss
@@ -641,6 +641,9 @@ p {
   float: left;
 }
 
+.mclean-left{ margin-left:0;}
+.mclean-right { margin-right:0;}
+
 /* Misc
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
