--- a/wp-content/themes/cp/css/partials/_custom.scss
+++ b/wp-content/themes/cp/css/partials/_custom.scss
@@ -218,12 +218,13 @@ aside ul {
 
 .readmore-social {
 	font-size: 1.45rem;
-	color: $quaternary-color;
+	color: $primary-color;
 	border-top: 1px solid $quaternary-color;
 	border-bottom: 1px solid $quaternary-color;
 	font-size: 1.45rem;
 	margin: 0 0 60px;
-	padding: 16px 0;
+	padding: 10px 0;
+	text-align:right;
 
 		a{ 
 			color: $quaternary-color;
@@ -231,15 +232,20 @@ aside ul {
 		}
 
 		:hover{ color:$tertiary-color ;}
+
+		span{ display: inline-block;
+    padding: 2px 5px;}
 	}
 
 	
 .footer {
-	background-color: #414141;
+	border-top: 1px solid $primary-color
+	 ;
+
 	p {
 		margin: 40px 0;
-		color: #fff;
-		text-align: center;
+		color:  $primary-color;
+		text-align: left;
 	}
 }
 
@@ -365,29 +371,44 @@ p { margin-left:0;}
 
 
 .socialbuttons{
-
+	float:right;
 	width:auto;
 	display:inline-block;
-	li { display: block;
-		 
-
-	}
+	li { 
+		width: 50px; 
+		display: inline-block;
+		height: 50px;
+		}
 
 	li a {
-	
-
-		 border: 0; 
-		 font: 0/0 a; 
-		 text-shadow: none; 
-		 color: transparent; 
-		 background: url(../images/sprite.png); 
-		 width: 50px; 
-		 height: 50px;
-
-
-
-	}
-	li.facebook a { background-position: 0 0}
-	li.twittter a{background-position: 50px 0}
-	li.google a {background-position: 50px 0}
+			 border: 1px solid  $primary-color; 
+			 font: 0/0 a; 
+			 text-shadow: none; 
+			 color: transparent; 
+			 background: url(../images/sprite.png); 
+			 width: 50px; 
+			 display: inline-block;
+			 height: 50px;
+		}
+li.facebook a {
+		    background-position: -85px 64px;
+		    &:hover{
+		    	 background-position: -85px -11px;
+		    }
+		 }
+li.twitter a {
+		    background-position: -10px -87px;
+		    &:hover{ background-position: -9px -10px;}
+		}
+li.google a {
+		    background-position: -159px -87px;
+		    &:hover{     background-position: -159px 140px;}
+		}
+li.instan a {
+		    background-position: -536px -88px;
+		    &:hover{ background-position: -536px 140px;}
+		}
 }
+
+
+.us_shortcode  { float:right;}
