--- a/wp-content/themes/cp/css/partials/_skeleton.scss
+++ b/wp-content/themes/cp/css/partials/_skeleton.scss
@@ -344,8 +344,13 @@ a {
 
 #FSContact3 input {
   &[type="submit"], &[type="reset"], &[type="button"] {
-    background-color:red;
-
+    background-color:$primary-color;
+    color: #fff;
+    padding:5px 10px;
+    display: inline-block;
+     float: right; 
+     border:1px solid $primary-color;
+     font-size: 1.6rem
 
 
 
@@ -354,7 +359,7 @@ a {
 }
 
 .button:hover, button:hover ,.reply a:hover {
-  color: $ahover-color;
+  color:$primary-color;
   border-color: $ahover-color;
   outline: 0;
 }
@@ -427,7 +432,6 @@ input {
     /* The 6px vertically centers text on FF, ignored by Webkit */
     background-color: #fff;
     border: 1px solid $alink-color;
-    border-radius: 4px;
     box-shadow: none;
     box-sizing: border-box;
   }
@@ -442,7 +446,6 @@ textarea, select {
   /* The 6px vertically centers text on FF, ignored by Webkit */
   background-color: #fff;
   border: 1px solid $ahover-color;
-  border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box;
 }
@@ -482,8 +485,9 @@ textarea:focus, select:focus {
 
 label, legend {
   display: block;
-  margin-bottom: .5rem;
-  font-weight: 600;
+  margin-bottom: .4rem;
+  font-weight: 300;
+  font-size: 1.4rem;
 }
 
 fieldset {
@@ -599,6 +603,24 @@ p {
   margin-top: 0;
 }
 
+
+blockquote{
+  font-family:Georgia;
+  text-decoration: italic; 
+:before{  font-size: 80px; content:'“';  position: relative;
+    z-index: 0;
+    top: 55px;
+    left: 5px;} 
+
+:after { font-size: 80px; content:'”';
+  position: relative;
+    z-index: 0;
+    bottom: 55px;
+    left: 5px;
+
+}
+
+}
 /* Utilities
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
