--- a/wp-content/themes/cp/css/jquery.flex-images.css
+++ b/wp-content/themes/cp/css/jquery.flex-images.css
@@ -1,3 +1,3 @@
-.flex-images { overflow: hidden; }
-.flex-images .item { float: left; margin: 4px; border: 1px solid #eee; box-sizing: content-box; overflow: hidden; position: relative;  }
-.flex-images .item img { display: block; width: auto; height: 100%; }
+#flex { overflow: hidden; }
+#flex .item { float: left; margin: 4px; border: 1px solid #000; box-sizing: content-box; overflow: hidden; position: relative;  }
+#flex .item img { display: block; width: auto; height: 100%; }
