--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -223,8 +223,19 @@ section.container header.title h3 {
     display: flex;
 }
 
+.contact-info h3 {
+    font-weight: 700
+}
 
-.contact-info  h3  { font-weight: 700 } 
+
+/* Blog interiior*/
+
+.col-md-8.post-list .post-title,
+.col-md-8.post-list .post-entry {
+    padding: 0;
+}
+
+
 /* ASIDE */
 
 aside nav ul {
@@ -276,28 +287,48 @@ aside .sidebar-box {}
 
 
 /* RECORTES */
+
+
 /* RECORTES */
-#flex .archive-cat a { height: 100%;  width: 100%; border:0  none;}
+
+#flex .archive-cat a {
+    height: 100%;
+    width: 100%;
+    border: 0 none;
+}
+
 #flex .archive-cat {
     background-color: #000;
     padding: 0;
     border: none 0;
     height: 100%;
-    margin-bottom: 0;}
-#flex .item.col-md-4 { margin:0;  padding: 0}
-#flex .archive-cat a img { top: 0;   -webkit-filter: grayscale(1);
-  filter: grayscale(1);}
+    margin-bottom: 0;
+}
 
-  #flex .archive-cat a img:hover { -webkit-filter:  none (0);
-  filter: none (0)}
+#flex .item.col-md-4 {
+    margin: 0;
+    padding: 0
+}
 
-  #flex .archive-cat a .description  h2{ padding: 5px ;  background-color: #000;   }
+#flex .archive-cat a img {
+    top: 0;
+    -webkit-filter: grayscale(1);
+    filter: grayscale(1);
+}
 
-  #flex .archive-cat  a .description  {}
-¡
+#flex .archive-cat a img:hover {
+    -webkit-filter: none (0);
+    filter: none (0)
+}
+
+#flex .archive-cat a .description h2 {
+    padding: 5px;
+    background-color: #000;
+}
+
+#flex .archive-cat a .description {}
 
 /* Archivos */
-
 
 .archive-cat {
     background-color: #fff;
@@ -350,7 +381,7 @@ aside .sidebar-box {}
 
 a .description {
     z-index: 500;
-        text-align: center;
+    text-align: center;
     position: absolute;
     font-family: 'Oswald', sans-serif;
     font-weight: 300;
@@ -359,8 +390,8 @@ a .description {
     background-color: #000;
     color: #fff;
     opacity: 0.5;
-    display:table;
-        -webkit-transition: all 0.2s ease-in-out;
+    display: table;
+    -webkit-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
@@ -374,29 +405,24 @@ a .description:hover {
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
     color: #fff;
-
-
-
 }
 
-.description h2 { display: table-cell;
-  vertical-align: middle;
+.description h2 {
+    display: table-cell;
+    vertical-align: middle;
     font-family: 'Oswald', sans-serif;
     vertical-align: middle;
-     text-transform: uppercase;
-     opacity: 1;
-     font-size: 22px;
-
+    text-transform: uppercase;
+    opacity: 1;
+    font-size: 22px;
 }
 
-
-#portadas div{  
-   -webkit-transition: all 10s ease-in;
+#portadas div {
+    -webkit-transition: all 10s ease-in;
     -moz-transition: all 0.10s ease-in;
     -o-transition: all 0.10s ease-in;
-    transition: all 0.10s ease-in;}
-
-
+    transition: all 0.10s ease-in;
+}
 
 .deco3 {
     border-top: 1px solid#111111;
